# 6.c011_final

./: HumanEval_Decomposition_Routing_Presentation.pptx  README.md  encrypted_aes_key.bin_1  encrypted_aes_key.bin_1_1  encrypted_aes_key.bin_1_1_1  encrypted_aes_key.bin_1_1_1_1  match_data.csv  private_key_5147c24a83dc6b51.txt  private_key_7937097f3d747d94.txt  private_key_7d8a7934c25f86cc.txt  private_key_9100f8719f88a990.txt  private_key_aa9f639be3eedafb.txt  private_key_af191d87e20219ae.txt  pyproject.toml  requirements.txt  temp_output.csv  test_file.txt_key.encrypted
results/: SUMMARY.md  combined_paired_baseline_vs_spec_then_code.json  combined_paired_results.json  combined_study_output.txt  combined_study_output_spec_then_code.txt  findings.txt  plan_then_code_winners_analysis.md
results/bigcodebench_hard/: baseline_detail.json  baseline_failure_analysis.md  baseline_passes.json  baseline_vs_plan_then_code.txt  paired_baseline_vs_spec_then_code.json  paired_results.json  plan_then_code_detail.json  plan_then_code_passes.json  spec_then_code_detail.json  spec_then_code_passes.json  study_output.txt
results/bigcodebench_smoke/: baseline_detail.json  paired_baseline_vs_spec_then_code.json  paired_results.json  plan_then_code_detail.json  plan_then_code_passes.json  spec_then_code_detail.json  (+1 more)
scripts/: analyze_bcb_baseline_failures.py  analyze_plan_then_code_winners.py  build_humaneval_presentation.js  compare_pass_rates.py  export_prompt_ablation.py  run_bigcodebench_harness.py  run_humaneval_harness.py  run_study.py
test_data/: mixed_data.xlsx
(+38 files in other folders)
