[project]
name = "decomposition-study"
version = "0.1.0"
description = "Empirical study: when does task decomposition help vs monolithic coding?"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]

[project.optional-dependencies]
humaneval = ["human-eval>=1.0"]
swebench = ["datasets>=2.14"]

[project.scripts]
run-decomposition-study = "decomposition_study.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
